--- a/css/style.css
+++ b/css/style.css
@@ -79,190 +79,7 @@ body {
     box-sizing: border-box;
 
 }
-
-.heading-primary {
-  color: #fff;
-  text-transform: uppercase;
-  margin-bottom: 6rem;
-}
-
-.heading-primary--main {
-    display: block;
-    font-size: 3rem;
-    font-weight: 400;
-    letter-spacing: 1.5rem;
-    animation: moveInLeft 1s ease-out;
-
-}
-
-.heading-primarty--sub {
-    display: block;
-    font-size: 1rem;
-    font-weight: 700;
-    letter-spacing: 1.5rem;
-    animation: moveInRight 1s ease-out;
-}
-
-.heading-primarty--detail{
-    display: block;
-    font-size: 1.5rem;
-    font-weight: 700;
-    padding-top: 3rem;
-    animation: moveInRight 1s ease-out;
-}
-
-.heading-secondary {
-    font-size: 3.5rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    display: inline-block;
-    letter-spacing: .2rem;
-    cursor: pointer;
-    background-image: linear-gradient(to right, #FF512F, #F09819);
-    -webkit-background-clip: text;
-    color: transparent;
-    transition: all .2s; 
-    
-}
-
-@media (max-width: 900px) {
-.heading-secondary {
-    font-size: 3rem;
-    } 
-}
-
-@media (max-width: 600px) {
-.heading-secondary {
-    font-size: 2.5rem; 
-    } 
-}
-.heading-secondary:hover {
-    transform: skewY(5deg) scale(1.1);
-    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
-}
-  
-.heading-tertiary {
-    font-size: 1.6rem;
-    font-weight: 700;
-    text-transform: uppercase; 
-}
-  
-.paragraph {
-    font-size: 1.6rem; 
-}
-  
-.paragraph:not(:last-child) {
-    margin-bottom: 3rem; 
-}
-  
-.u-center-text {
-    text-align: center !important; 
-}
-  
-.u-margin-bottom-big {
-    margin-bottom: 8rem !important;
-}
-  
-.u-margin-bottom-small {
-    margin-bottom: 1.5rem !important; 
-}
-  
-.btn:link, .btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    font-size: 1.6rem;
-    position: relative;
-    transition: all .2s; 
-}
-  
-.btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    border-radius: 10rem;
-    transition: all .4s; 
-}
-  
-.btn:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.2); 
-}
-
-.btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0; 
-}
-  
-.btn:active {
-    outline: none;
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); 
-}
-
-.btn--white {
-    color: #777777;
-    background-color: #fff;
-}
-
-.btn--blue {
-    background-color: #5a73fc;
-    color: #fff; 
-}
-
-.btn--orange{
-    background-color: #ef3d32 !important;
-    color:white;
-    border-radius: 0.1rem !important;
-}
-  
-.btn--white::after {
-    background-color: #fff; 
-}
-  
-.btn--blue {
-    background-color: #5a73fc;
-    color: #fff; 
-}
-    
-.btn--blue::after {
-      background-color: #5a73fc; 
-}
-  
-.btn--animated {
-    animation: moveInBottom .5s ease-out .75s;
-    animation-fill-mode: backwards; 
-}
-  
-.btn-text:link, .btn-text:visited {
-    color: #5a73fc;
-    display: inline-block;
-    text-decoration: none;
-    border-bottom: 1px solid #5a73fc;
-    padding: .3rem;
-    font-size: 1.6rem;
-    transition: all .2s; 
-}
-  
-.btn-text:hover {
-    background-color: #5a73fc;
-    color: #fff;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
-    transform: translateY(-0.2rem); 
-}
-  
-.btn-text:active {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    transform: translateY(0); 
-}
-  
+ 
 .composition {
      position: relative; 
 }
@@ -628,18 +445,17 @@ ul.about-details-list li:before {
 
 .section-enroll {
     padding: 1rem;
-    background-image: linear-gradient(to right bottom, #FF512F, #F09819); }
+    /*background-image: linear-gradient(to right bottom, #FF512F, #F09819); */ }
   
 .enroll {
-    background-image: radial-gradient(150% 200% ellipse at -15%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("../img/background3.jpg");
     background-size: cover;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
-    border-radius: 5rem;
-    height: 75rem; 
+    border-radius: 5rem; 
     width:100%;
+    
 }
    
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
     .enroll {
         background-image: radial-gradient(150% 200% ellipse at -15%, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 65%, transparent 35%), url("../img/event_1.jpg"); }
 }
@@ -647,11 +463,13 @@ ul.about-details-list li:before {
 @media (max-width: 900px) {
     .enroll {
         background-image: linear-gradient(to right, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%), url("../img/background3.jpg"); } 
-}
+} */
   
 .enroll__form {
-    padding: 6rem;
+    padding: 1rem;
     width: 50%; 
+    margin: 0 auto;
+    
 }
 
 @media (max-width: 1200px) {
@@ -669,9 +487,9 @@ ul.about-details-list li:before {
 }
           
 .form__input {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-family: "Segoe UI",Arial,sans-serif;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 1rem;
   color: inherit;
   border: none;
   border-radius: .2rem;
@@ -717,14 +535,14 @@ ul.about-details-list li:before {
   display: inline-block; }
 
 .form__radio-label {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   cursor: pointer;
   position: relative;
   padding-left: 5rem; }
 
 .form__radio-button {
-  height: 3rem;
-  width: 3rem;
+  height: 2.5rem;
+  width: 2.5rem;
   border: 0.5rem solid #5a73fc;
   border-radius: 10rem;
   display: inline-block;
@@ -749,266 +567,9 @@ ul.about-details-list li:before {
   opacity: 1; }           
   
   
-header {
-    background-image: linear-gradient(to right bottom, rgba(236, 0, 140, 0.5), rgba(252, 103, 103, 0.5)), url('../img/heart-bg.jpg');
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    height:95vh;
-    clip-path: ellipse(98% 59% at 23% 35%);
-}
-
-
-
-
-.header__text-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-   
-}
-
-@media (min-resolution: 192dpi) and (max-width: 900px) {
-    header {
-    background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8)), url('../img/heart-bg.jpg'); } 
-}
-    
-@media (max-width: 600px) {
-    header {
-        clip-path: circle(85.3% at 26% 0); } 
-}
-
-
-.header__logo {
-    height: 7rem; 
-}
-
-
-.header__logo-box {
-    position: absolute;
-    top: 2rem;
-    left: 2rem;
-}
-
-.logo {
-    height: 15rem;
-}
-  
-@media (max-width: 900px) {
-    .footer {
-        padding: 8rem 0; 
-    } 
-}
-
-.footer__logo-box {
-    text-align: center;
-    margin-bottom: 8rem; 
-}
-      
-@media (max-width: 900px) {
-    .footer__logo-box {
-          margin-bottom: 6rem; 
-    }
-}
-    
-.footer__logo {
-    width: 20rem;
-    height: auto; 
-}
-
-.footer__navigation {
-    border-top: 1px solid #f7f7f7;
-    padding-top: 2rem;
-    display: inline-block; 
-}
-
-@media (max-width: 900px) {
-      .footer__navigation {
-        width: 100%;
-        text-align: center; 
-    } 
-}
- 
-.footer__list {
-    list-style: none; 
-}
-    
-.footer__item {
-    display: inline-block; 
-}
-
-.footer__item:not(:last-child) {
-    margin-right: 1.5rem; 
-}
-
-.footer__link:link, 
-.footer__link:visited {
-    color: #f7f7f7;
-    background-color: #333;
-    text-transform: uppercase;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 5rem;
-    transition: all .2s; 
-}
-
-.footer__link:hover, 
-.footer__link:active {
-    color: #5a73fc;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
-    transform: rotate(5deg) scale(1.05); 
-}
-
-.footer__copyright {
-    border-top: 1px solid #f7f7f7;
-    padding-top: 2rem;
-    width: 70%;
-    float: right; 
-}
-
-@media (max-width: 900px) {
-      .footer__copyright {
-        width: 100%;
-        text-align: center;
-        float: none; 
-    } 
-}
- 
-.footer__title {
-    display: block;
-    font-size: 1.1rem;
-}
-
-  
-  .navigation__checkbox {
-    display: none; }
-  
-  .navigation__button {
-    background-color: #fff;
-    height: 7rem;
-    width: 7rem;
-    position: fixed;
-    top: 6rem;
-    right: 6rem;
-    border-radius: 50%;
-    z-index: 2000;
-    cursor: pointer;
-    text-align: center;
-    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.15); }
-    @media (max-width: 900px) {
-      .navigation__button {
-        top: 4rem;
-        right: 4rem; } }
-    @media (max-width: 600px) {
-      .navigation__button {
-        top: 3.5rem;
-        right: 3.5rem; } }
-  
-  .navigation__background {
-    height: 6rem;
-    width: 6rem;
-    border-radius: 50%;
-    position: fixed;
-    top: 6.5rem;
-    right: 6.5rem;
-    background-image: linear-gradient(to right bottom, rgba(236, 0, 140, 0.5), rgba(252, 103, 103, 0.5));
-    z-index: 1000;
-    opacity:0.5;
-    transition: transform .8s; }
-    @media (max-width: 900px) {
-      .navigation__background {
-        top: 4.5rem;
-        right: 4.5rem; } }
-    @media (max-width: 600px) {
-      .navigation__background {
-        top: 4rem;
-        right: 3.5rem; } }
-  
-  .navigation__nav {
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 1500;
-    opacity: 0;
-    width: 0;
-    transition: all .8s; }
-  
-  .navigation__list {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    list-style: none;
-    text-align: center; }
-  
-  .navigation__item {
-    margin: 1rem; }
-  
-  .navigation__link:link, .navigation__link:visited {
-    display: inline-block;
-    border-radius: 4rem;
-    font-size: 3rem;
-    font-weight: 300;
-    padding: 1rem 2rem;
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    background-image: radial-gradient(150% 200% ellipse at 115%, #fff 0%, #fff 50%, transparent 50%);
-    background-size: 252%;
-    transition: all .4s; }
-  
-  .navigation__link:hover, .navigation__link:active {
-    background-position: 100%;
-    background-image: linear-gradient(to right bottom, #FF512F, #F09819);
-    transform: translateX(1rem); }
-  
-  .navigation__checkbox:checked ~ .navigation__background {
-    transform: scale(80); }
-  
-  .navigation__checkbox:checked ~ .navigation__nav {
-    opacity: 1;
-    width: 100%; }
-  
-  .navigation__icon {
-    position: relative;
-    margin-top: 3.2rem; }
-    .navigation__icon, .navigation__icon::before, .navigation__icon::after {
-      width: 3.5rem;
-      height: .3rem;
-      background-color: #333;
-      display: inline-block; }
-    .navigation__icon::before, .navigation__icon::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      transition: all .2s; }
-    .navigation__icon::before {
-      top: -.8rem; }
-    .navigation__icon::after {
-      top: .8rem; }
-  
-  .navigation__button:hover .navigation__icon::before {
-    top: -1rem; }
-  
-  .navigation__button:hover .navigation__icon::after {
-    top: 1rem; }
-  
-  .navigation__checkbox:checked + .navigation__button .navigation__icon {
-    background-color: transparent; }
-  
-  .navigation__checkbox:checked + .navigation__button .navigation__icon::before {
-    top: 0;
-    transform: rotate(135deg); }
-  
-  .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
-    top: 0;
-    transform: rotate(-135deg); }
-  
 .section-about {
-    padding: 15rem 0; 
+    padding: 10rem 0;
+    margin-bottom: 10rem; 
 }
 
 .about-details{
@@ -1191,6 +752,8 @@ header {
 
 .slideshow-container img{
   width: 80%;
+  border-radius: 1rem;
+  padding-top:0.7rem;
 }
 
 @media (max-width: 600px) {
@@ -1216,21 +779,11 @@ header {
 .slideshow-container{
   margin-top: 3rem;
   background-color: #f8f9fa;
+  border-radius: 3rem;
+  padding: 1rem;
 }
 
-.heading-separator {
-    width: 6rem!important;
-    height: 0.2rem !important;
-    position: relative;
-    top: -0.1rem;
-    
-}
 
-.heading-separator{
-    display: inline-block;
-    background: #EF3D32;
-    margin-top: 1rem;
-}
 
 i{
     color: #EF3D32 ;
@@ -1322,191 +875,46 @@ i{
 
 .section-testimonials {
     position: relative;
-    padding: 5rem 0 5rem 0; }
+    padding: 5rem 0 5rem 0; 
+}
+
+.parallax__skill {
+    /* The image used */
+    background-image: url("/img/home_1_slider_1.jpg");
   
-.footer {
-    z-index: 1;
-    --footer-background:#ED5565;
-    display: grid;
-    position: relative;
-    grid-area: footer;
-    min-height: 7rem;
-    
-  }
-.footer .bubbles {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 1rem;
-    background: var(--footer-background);
-    filter: url("#blob");
-  }
-.footer .bubbles .bubble {
-    position: absolute;
-    left: var(--position, 50%);
-    background: var(--footer-background);
-    border-radius: 100%;
-    -webkit-animation: bubble-size var(--time, 4s) ease-in infinite var(--delay, 0s), bubble-move var(--time, 4s) ease-in infinite var(--delay, 0s);
-            animation: bubble-size var(--time, 4s) ease-in infinite var(--delay, 0s), bubble-move var(--time, 4s) ease-in infinite var(--delay, 0s);
-    transform: translate(-50%, 100%);
-  }
-.footer {
-    z-index: 2;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-gap: 4rem;
-    padding: 2rem;
-    background: var(--footer-background);
-  }
-.footer a, body .footer p {
-    color: #F5F7FA;
-    text-decoration: none;
-  }
-.footer b {
-    color: white;
-  }
-.footer p {
-    margin: 0;
-    font-size: 0.75rem;
-  }
-.footer> div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-.footer > div > div {
-    margin: 0.5rem 0;
-  }
-.footer  > div > div > * {
-    margin-right: 0.5rem;
-  }
-.footer > div .image {
-    align-self: center;
-    width: 4rem;
-    height: 4rem;
-    margin: 0.25rem 0;
-    background-size: cover;
+    /* Set a specific height */
+    min-height: 50rem; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
     background-position: center;
-  }
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax__slide {
+  /* The image used */
+  background-image: url("/img/home_1_slider_2.jpg");
   
-  @-webkit-keyframes bubble-size {
-    0%, 75% {
-      width: var(--size, 4rem);
-      height: var(--size, 4rem);
-    }
-    100% {
-      width: 0rem;
-      height: 0rem;
-    }
-  }
+  /* Set a specific height */
+  min-height: 50rem; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax__enroll{
+  /* The image used */
+  background-image: url("/img/header-bg.jpg");
   
-  @keyframes bubble-size {
-    0%, 75% {
-      width: var(--size, 4rem);
-      height: var(--size, 4rem);
-    }
-    100% {
-      width: 0rem;
-      height: 0rem;
-    }
-  }
-  @-webkit-keyframes bubble-move {
-    0% {
-      bottom: -4rem;
-    }
-    100% {
-      bottom: var(--distance, 10rem);
-    }
-  }
-  @keyframes bubble-move {
-    0% {
-      bottom: -4rem;
-    }
-    100% {
-      bottom: var(--distance, 10rem);
-    }
-  }
+  /* Set a specific height */
+  min-height: 50rem; 
 
-li,ul{
-    list-style-type: none;
-}
-
-ul.nav__ul li:before{
-    content: '';
-    display: inline-block;
-    width: 1rem;
-    background: transparent;
-    border: 1px solid #f2f2f2 ;
-    margin: 7px 11px 0 -1.8rem;
-    height: 1rem;
-    position: absolute;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-    
-}
-
-.nav__ul{
-    font-family: "Segoe UI",Arial,sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.01rem;
-    margin: 0 0 1rem;
-    padding: 0;
-    
-}
-
-ul.nav__ul{
-    margin-bottom: 1rem;
-}
-
-ul.nav__ul li{
-    margin:2rem 1rem 1rem 3rem;
-    font: 1.4rem "Segoe UI",Arial,sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    letter-spacing: 0.01rem;
-    padding: 0;
-    
-}
-
-.footer__detail{
-    padding: 0rem 3rem 3rem 3rem;
-    background-color: #ED5565;
-    color:#fff;
-    font-size: 1.1rem;
-    font-weight: 400;
-}
-
-.footer__phone a, .footer__mail a{
-    text-decoration: none;
-    color:#fff;
-}
-
-.footer__copy{
-    margin-top: 0.11rem;
-    background-color: #ED5565;
-    color: #F5F7FA;
-    height:5rem;
-    
-}
-
-
-.legal__links{
-    text-align: right;  
-}
-
-.legal, .legal__links{
-    padding: 2rem;
-}
-
-.footer__icon{
-    padding-top: 3rem;
-}
-
-.footer__icon a{
-    padding:0.3rem;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
