--- a/src/resources/view/layouts/pass-forgot.html
+++ b/src/resources/view/layouts/pass-forgot.html
@@ -22,18 +22,18 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="css/iconic/css/material-design-iconic-font.min.css"
+      href="/src/public/iconic/css/material-design-iconic-font.min.css"
     />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="css/util.css" />
-    <link rel="stylesheet" type="text/css" href="css/intro.css" />
+    <link rel="stylesheet" type="text/css" href="/src/public/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="/src/public/css/intro.css" />
     <!--===============================================================================================-->
   </head>
   <body>
     <div class="limiter">
       <div class="container-login100">
         <div class="wrap-passfg">
-          <form class="login100-form" method="" action="/login.html">
+          <form class="login100-form" method="" action="./login.html">
             <span class="login100-form-title p-b-56"
               >Forgot Your Password?</span
             >
@@ -81,23 +81,6 @@
               $(this).removeClass("has-val");
             }
           });
-        });
-
-        /*==================================================================
-    [ Show pass ]*/
-        var showPass = 0;
-        $(".btn-show-pass").on("click", function () {
-          if (showPass == 0) {
-            $(this).next("input").attr("type", "text");
-            $(this).find("i").removeClass("zmdi-eye");
-            $(this).find("i").addClass("zmdi-eye-off");
-            showPass = 1;
-          } else {
-            $(this).next("input").attr("type", "password");
-            $(this).find("i").addClass("zmdi-eye");
-            $(this).find("i").removeClass("zmdi-eye-off");
-            showPass = 0;
-          }
         });
       })(jQuery);
     </script>
