--- a/src/public/css/order.css
+++ b/src/public/css/order.css
@@ -110,7 +110,7 @@ h6 {
      ========================================================================== */
 
 .bg-color-1 {
-  background: #ffece0;
+  background: #e6e6e6;
 }
 
 /* ==========================================================================
