sort code enter ejs file and link css

--- a/src/public/css/person.css
+++ b/src/public/css/person.css
@@ -1351,12 +1351,9 @@
   }
   
   .bg-gradient-default {
-    background: linear-gradient(87deg, #172b4d 0, #1a174d 100%) !important;
+    background: linear-gradient(87deg,#FEECE9 0, #FEECE9 100%) !important;
   }
-  
-  .bg-gradient-default {
-    background: linear-gradient(87deg, #172b4d 0, #1a174d 100%) !important;
-  }
+
   
   @keyframes floating-lg {
     0% {
