--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -25,8 +25,9 @@
       href="/src/public/iconic/css/material-design-iconic-font.min.css"
     />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="/src/public/css/util.css" />
-    <link rel="stylesheet" type="text/css" href="/src/public/css/intro.css" />
+    <link rel="stylesheet" href="./css/intro.css" />
+    <link rel="stylesheet" href="./css/util.css" />
+   
     <!--===============================================================================================-->
   </head>
   <body>
