--- a/src/public/css/test.css
+++ b/src/public/css/test.css
@@ -1,185 +1,55 @@
-*, *:before, *:after {
-	box-sizing: border-box;
+body {
+  margin-top: 20px;
+  color: #1a202c;
+  text-align: left;
+  background-color: #e2e8f0;
 }
-body{
-	overflow-y:visible;
-}
-.cardwrapper {
-	display:flex;
-	flex-wrap: wrap;
-	justify-content:center;
-	_align-items:center;
-	
-padding:.5em;
+.main-body {
+  padding: 15px;
 }
 .card {
-	position: relative;
-	margin: 10px 1%;
-	width:31%;
-	max-width: 280px;
-	max-height: 280px;
-	min-width: 260px;
-	min-height: 260px;
-	background: #222;
-	overflow: hidden;
-		 
-
-}
-.card .imgBx, .card .details {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-		  border-radius: 10px;
-
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
 
-.card .imgBx {
-	top: 0;
-	left: 0;
-	background-color: #ccc;
-	background-repeat: no-repeat;
-	background-position: center top;
-	background-size: cover;
-	padding: .5em;
-	transition: left .5s;
-	  will-change: left;
-
-}
-
-.card:nth-of-type(1) .imgBx {
-	background-image: url(/img/istockphoto-1317285618-170667a.jpg);
-}
-
-.card:nth-of-type(2) .imgBx {
-	background-image: url(/img/istockphoto-1317285618-170667a.jpg);
-}
-
-.card:nth-of-type(3) .imgBx {
-	background-image: url(/img/istockphoto-1317285618-170667a.jpg);
-}
-
-.card:hover .imgBx {
-	top: 0;
-	left: -100%;
-}
-
-.card .imgBx img {
-	width: 100%;
-}
-
-.card .imgBx nav {
+.card {
   position: relative;
-  background: rgba(0, 0, 0, .35);
-  width: 34px;
-  height: 34px;
-  color: white;
-	border: 1px solid white;
-  border-radius: 50%;
-  box-shadow: 0px 0px 16px 1px rgba(255, 255, 255, .75);
-  margin: 0px;
-	float:right;
-}
-.card .imgBx nav:after {
-  content: '•••';
-  position: absolute;
-  top: 50%;
-  left: 49%;
-  transform: translate(-50%, -50%) rotate(90deg);
-  font-size: 15px; 
-  letter-spacing: 2px;
-  margin-top: 1px;
-}
-/*shows only om touch devices*/
-.card .details nav {
-	display:none;
-  position: absolute;
-	right: 10px;
-	bottom:10px;
-  background: rgba(0, 0, 0, .35);
-  width: 34px;
-  height: 34px;
-  color: white;
-	border: 1px solid white;
-  border-radius: 50%;
-}
-.card .details nav:after {
-  content: 'X';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 15px; 
-  margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0 solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
 }
 
-.card .details {
-		color: #fff;
-	background: #222;
-	top: 0;
-	left: 100%;
-	padding: 0;
-	transition: left .5s;
-	  will-change: left;
-}
-.card:hover .details {
-	top: 0;
-	left: 0%;
+.card-body {
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1rem;
 }
 
-.card .detailsBGtouch {
-	background: #444;
+.gutters-sm {
+  margin-right: -8px;
+  margin-left: -8px;
 }
 
-.card .details h2 {
-	text-align: center;
-	margin: 0;
-	padding: 10px;
-	border-bottom: 2px solid #fff;
+.gutters-sm > .col,
+.gutters-sm > [class*="col-"] {
+  padding-right: 8px;
+  padding-left: 8px;
+}
+.mb-3,
+.my-3 {
+  margin-bottom: 1rem !important;
 }
 
-.card .details p {
-	margin: 0;
-padding: 1em;
+.bg-gray-300 {
+  background-color: #e2e8f0;
 }
-
-.card .details p a {
-	color: #fffccc;
+.h-100 {
+  height: 100% !important;
 }
-
-.card .details span {
-	color: #999;
-	display:block;
-line-height:2em;
-	text-align: center;
-	letter-spacing: 10px;
-}
-
-.card .details ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-.card .details li a {
-	display:block;
-	color: #fff;
-	text-decoration: none;
-	padding: 5px 1em;
-		background:#444;
-	border-top: 1px solid #666;
-		border-bottom: 1px solid #000;
-font-size:90%;
-	line-height:1;
-}
-.card .details li a:hover {
-	background:#333;
-}
-
-.logtxt{opacity:0;
-position:absolute;
-	width:100%;
-	height:40px;
-	z-index:2;
-	background:rgba(0,0,0,.5);
-	margin:0;
+.shadow-none {
+  box-shadow: none !important;
 }
