--- a/src/views/home_main.ejs
+++ b/src/views/home_main.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/styleall.css" />
-    <link rel="stylesheet" href="./css/icomoon.css" />
+    <!-- <link rel="stylesheet" href="./css/icomoon.css" /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Add this-->
     
