--- a/src/views/appointment.ejs
+++ b/src/views/appointment.ejs
@@ -49,25 +49,13 @@
       <div class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link">About us</a>
+            <a href="" class="navigation__link">About us</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">Blood bank</a>
+            <a href="" class="navigation__link">Appointment</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">Nutrition</a>
-          </li>
-          <li class="navigation__item">
-            <a href="#" class="navigation__link">Testimonials</a>
-          </li>
-          <li class="navigation__item">
-            <a href="#" class="navigation__link">Enroll form</a>
-          </li>
-          <li class="navigation__item">
-            <a href="#" class="navigation__link">Person</a>
-          </li>
-          <li class="navigation__item">
-            <a href="#" class="navigation__link">Login</a>
+            <a href="" class="navigation__link">Personal Information</a>
           </li>
         </ul>
       </div>
