--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -26,10 +26,8 @@
     />
     <!--===============================================================================================-->
     <!-- <link rel="stylesheet" type="text/css" href="/src/public/css/util.css" /> -->
-    <link rel="stylesheet" type="text/css" href="../public/css/util.css" />
-    <link rel="stylesheet" type="text/css" href="../public/css/intro.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="/src/public/css/intro.css" /> -->
-    <!-- <link rel="stylesheet" type="text/css" href="/src/public/css/intro.css" /> -->
+    <link rel="stylesheet" href="../css/util.css" />
+    <link rel="stylesheet" href="../css/intro.css" />
     <!--===============================================================================================-->
   </head>
   <body>
