--- a/src/views/nutri.ejs
+++ b/src/views/nutri.ejs
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/styleall.css" />
-    <link rel="stylesheet" href="./css/nuti.css"/>
-    <link rel="stylesheet" href="./css/test.css"/>
+    <link rel="stylesheet" href="../css/styleall.css" />
+    <link rel="stylesheet" href="../css/nuti.css"/>
+    <link rel="stylesheet" href="../css/test.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Add this-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
