--- a/src/views/home_donor.ejs
+++ b/src/views/home_donor.ejs
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/styleall.css" />
-    <link rel="stylesheet" href="./css/icomoon.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/styleall.css" />
+    <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Add this-->
     
@@ -40,7 +40,7 @@
     </div>
     <header class="header">
         <div class="header__logo-box">
-            <img src="./img/logo-heart.png" class="logo" alt="logo">
+            <img src="../img/logo-heart.png" class="logo" alt="logo">
         </div>
         <div class="header__text-box">
             <h3 class="heading-primary">
