--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -68,7 +68,7 @@
             <!-- Sign up -->
             <div class="text-center mt-5">
               <span class="txt1">Don't have an account?</span>
-              <a class="txt2" href="./signup.html">Sign Up</a>
+              <a class="txt2" href="./signup">Sign Up</a>
             </div>
           </form>
         </div>
