--- a/src/public/css/order.css
+++ b/src/public/css/order.css
@@ -25,11 +25,11 @@ html {
 }
 
 /* ==========================================================================
-     #RESET
-     ========================================================================== */
+   #RESET
+   ========================================================================== */
 /**
-   * A very simple reset that sits on top of Normalize.css.
-   */
+ * A very simple reset that sits on top of Normalize.css.
+ */
 body,
 h1,
 h2,
@@ -43,6 +43,8 @@ pre,
 dl,
 dd,
 ol,
+.content,
+.container,
 ul,
 figure,
 hr,
@@ -50,6 +52,16 @@ fieldset,
 legend {
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  text-align: center;
+  color: #202020;
+}
+
+span {
+  color: rgb(211, 2, 2);
+  font-weight: bold;
 }
 
 button {
@@ -60,8 +72,8 @@ button {
 }
 
 /* ==========================================================================
-     #PAGE WRAPPER
-     ========================================================================== */
+   #PAGE WRAPPER
+   ========================================================================== */
 .page-wrapper {
   min-height: 100vh;
 }
@@ -106,16 +118,16 @@ h6 {
 }
 
 /* ==========================================================================
-     #BACKGROUND
-     ========================================================================== */
+   #BACKGROUND
+   ========================================================================== */
 
-.bg-color-1 {
-  background: #e6e6e6;
+body {
+  background: #efefef;
 }
 
 /* ==========================================================================
-     #SPACING
-     ========================================================================== */
+   #SPACING
+   ========================================================================== */
 .p-t-15 {
   padding-top: 15px;
 }
@@ -134,8 +146,8 @@ h6 {
   }
 }
 
-.p-t-395 {
-  padding-top: 395px;
+.p-t-95 {
+  padding-top: 95px;
 }
 
 @media (max-width: 767px) {
@@ -215,8 +227,8 @@ h6 {
 }
 
 /* ==========================================================================
-     #WRAPPER
-     ========================================================================== */
+   #WRAPPER
+   ========================================================================== */
 .wrapper {
   margin: 0 auto;
 }
@@ -242,8 +254,8 @@ h6 {
 }
 
 /* ==========================================================================
-     #BUTTON
-     ========================================================================== */
+   #BUTTON
+   ========================================================================== */
 .btn-submit {
   display: inline-block;
   line-height: 82px;
@@ -275,6 +287,15 @@ h6 {
   }
 }
 
+.btn-order {
+  line-height: 55px !important;
+  margin-top: 40px;
+  margin-bottom: 90px;
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .m-t-0 {
   margin-top: 0;
 }
@@ -288,8 +309,8 @@ h6 {
 }
 
 /* ==========================================================================
-     #FORM
-     ========================================================================== */
+   #FORM
+   ========================================================================== */
 select,
 option {
   outline: none;
@@ -369,6 +390,14 @@ button {
   margin-bottom: 0;
 }
 
+.m-b-23 {
+  margin-bottom: 23px;
+}
+
+.m-b-100 {
+  margin-bottom: 100px;
+}
+
 @media (max-width: 767px) {
   .m-b-0 {
     margin-bottom: 26px;
@@ -376,13 +405,181 @@ button {
 }
 
 /* ==========================================================================
-     #CARD
-     ========================================================================== */
+   #CARD
+   ========================================================================== */
 .card-7 {
   background: transparent;
   position: relative;
 }
 
 .card-7 .card-body {
-  padding: 0 67px;
+  padding: 0 66px;
+}
+
+/* ==========================================================================
+   #SEARCHING RESULT
+   ========================================================================== */
+th {
+  color: #212529;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  padding: 12px;
+}
+
+h2 {
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(189, 0, 0);
+}
+
+.content {
+  margin-top: 90px;
+}
+
+.container {
+  position: absolute;
+  left: 50%;
+  margin-top: 190px;
+  transform: translate(-50%, -50%);
+}
+
+.custom-table {
+  min-width: 900px;
+}
+
+.table .radio {
+  width: 70px;
+}
+
+.table .id {
+  width: 180px;
+}
+
+.table .collection,
+.expiry {
+  width: 325px;
+}
+
+.custom-table thead tr,
+.custom-table thead th {
+  border-top: none;
+  border-bottom: none !important;
+}
+.custom-table tbody th,
+.custom-table tbody td {
+  color: rgb(56, 56, 56);
+  font-size: 16px;
+  font-weight: 400;
+  padding: 18px 12px;
+}
+
+.custom-table tbody tr:not(.spacer) {
+  border-radius: 7px;
+  overflow: hidden;
+  -webkit-transition: 0.3s all ease;
+  -o-transition: 0.3s all ease;
+  transition: 0.3s all ease;
+}
+.custom-table tbody tr:not(.spacer):hover {
+  -webkit-box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
+}
+.custom-table tbody tr th,
+.custom-table tbody tr td {
+  background: #fff;
+  border: none;
+}
+.custom-table tbody tr th:first-child,
+.custom-table tbody tr td:first-child {
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+}
+.custom-table tbody tr th:last-child,
+.custom-table tbody tr td:last-child {
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+}
+.custom-table tbody tr.spacer td {
+  padding: 0 !important;
+  height: 7px;
+  border-radius: 0 !important;
+  background: transparent !important;
+}
+
+/* Custom Checkbox */
+.control {
+  display: block;
+  position: relative;
+  margin-bottom: 25px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.control input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.control__indicator {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 4px;
+  border: 2px solid #ccc;
+  background: transparent;
+}
+
+.control--radio .control__indicator {
+  border-radius: 50%;
+}
+
+.control:hover input ~ .control__indicator,
+.control input:focus ~ .control__indicator {
+  border: 2px solid #007bff;
+}
+
+.control input:checked ~ .control__indicator {
+  border: 2px solid #007bff;
+  background: #007bff;
+}
+
+.control input:disabled ~ .control__indicator {
+  background: #e6e6e6;
+  opacity: 0.6;
+  pointer-events: none;
+  border: 2px solid #ccc;
+}
+
+.control__indicator:after {
+  font-family: "icomoon";
+  content: "\e5ca";
+  position: absolute;
+  display: none;
+}
+
+.control input:checked ~ .control__indicator:after {
+  display: block;
+  color: #fff;
+}
+
+.control--checkbox .control__indicator:after {
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -52%);
+  -ms-transform: translate(-50%, -52%);
+  transform: translate(-50%, -52%);
+}
+
+.control--checkbox input:disabled ~ .control__indicator:after {
+  border-color: #7b7b7b;
+}
+
+.control--checkbox input:disabled:checked ~ .control__indicator {
+  background-color: #007bff;
+  opacity: 0.2;
+  border: 2px solid #007bff;
 }
