--- a/src/views/order.html
+++ b/src/views/order.html
@@ -17,19 +17,11 @@
       rel="stylesheet"
     />
 
-    <!-- Bootstrap CSS -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    /> -->
-
     <!-- Checked icon -->
-    <link rel="stylesheet" href="fonts/style.css" />
+    <link rel="stylesheet" href="../public/iconic/order_fonts/style.css" />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" type="text/css" href="css/order.css" />
+    <link rel="stylesheet" href="../public/css/order.css" />
   </head>
 
   <body>
@@ -185,20 +177,6 @@
             $(this).closest("tr").addClass("active");
           }
         });
-      });
-    </script>
-    <script>
-      $(document).ready(function () {
-        var HeightDiv = $("div").height();
-        var HeightTable = $("table").height();
-        if (HeightTable > HeightDiv) {
-          var FontSizeTable = parseInt($("table").css("font-size"), 10);
-          while (HeightTable > HeightDiv && FontSizeTable > 5) {
-            FontSizeTable--;
-            $("table").css("font-size", FontSizeTable);
-            HeightTable = $("table").height();
-          }
-        }
       });
     </script>
   </body>
