--- a/src/views/orderhistory.html
+++ b/src/views/orderhistory.html
@@ -26,7 +26,7 @@
     />
 
     <!-- Style -->
-    <link rel="stylesheet" href="../css/orderhis_style.css" />
+    <link rel="stylesheet" href="../public/css/order_history.css" />
   </head>
   <body>
     <div class="content">
