Get hospital name

--- a/src/views/orderBlood.ejs
+++ b/src/views/orderBlood.ejs
@@ -22,14 +22,11 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="../css/order.css" />
-
-    <!-- Date format -->
-    <script src="/path/to/date-and-time.min.js"></script>
   </head>
   <body>
     <div class="page-wrapper p-t-95">
       <div class="welcome m-b-100">
-        <h1>Welcome to <span>BloodLife</span>, Hospital A</h1>
+        <h1>Welcome to <span>BloodLife</span>, <%= hospitalName %>!</h1>
       </div>
 
       <!-- Searching Bar -->
