Add "In Short" Notification

--- a/src/views/orderBlood.ejs
+++ b/src/views/orderBlood.ejs
@@ -33,7 +33,7 @@
       <div class="wrapper wrapper--w1070">
         <div class="card card-7">
           <div class="card-body">
-            <form class="form" method="get" action="">
+            <form class="form" method="get" action="/hospital/ordering">
               <!-- Blood Product Type -->
               <div class="input-group input--large">
                 <label class="label">blood product type</label>
@@ -85,8 +85,8 @@
                 </div>
               </div>
 
-              <!-- Submit Button -->
-              <button class="btn-submit" type="submit">Search</button>
+              <!-- Search Button -->
+              <button type="submit" class="btn-submit">Search</button>
             </form>
           </div>
         </div>
@@ -94,7 +94,7 @@
 
       <!-- Searching Result -->
       <div class="content">
-        <form class="container" method="post" action="">
+        <form class="container" method="post" action="/hospital/ordering">
           <h2 class="m-b-25">Searching Result</h2>
 
           <!-- Result Table-->
