Complete workflow of hospital

--- a/src/views/notification.ejs
+++ b/src/views/notification.ejs
@@ -33,7 +33,7 @@
         </h2>
         <p>
           If <%= blood_type %> blood are in high demand to your hospital, please
-          <a href="/contact" class="contact">contact us!</a>
+          <a href="/hospital/contactus" class="contact">contact us!</a>
           <br />
           <a href="/hospital">Return to homepage</a>
         </p>
