--- a/src/public/css/contactus.css
+++ b/src/public/css/contactus.css
@@ -10675,7 +10675,7 @@ h5,
 }
 
 .bg-primary {
-  background-color: #646d97 !important;
+  background-color: #e7726c !important;
 }
 
 .ftco-section {
@@ -10729,7 +10729,7 @@ h5,
 }
 .form-control:focus,
 .form-control:active {
-  border-color: #646d97 !important;
+  border-color: #e7726c !important;
 }
 
 textarea.form-control {
@@ -10817,14 +10817,14 @@ textarea.form-control {
   box-shadow: 0px 10px 20px -6px rgba(0, 0, 0, 0.22) !important;
 }
 .btn.btn-primary {
-  background: #646d97 !important;
-  border-color: #646d97 !important;
+  background: #e7726c !important;
+  border-color: #e7726c !important;
   color: #fff;
 }
 .btn.btn-primary:hover,
 .btn.btn-primary:focus {
-  border-color: #555d80 !important;
-  background: #555d80 !important;
+  border-color: #d16862 !important;
+  background: #d16862 !important;
 }
 
 .contactForm .label {
@@ -10860,4 +10860,10 @@ textarea.form-control {
   display: none;
   font-size: 16px;
   font-weight: bold;
+}
+
+.mess {
+  font-size: 25px !important;
+  color: #17c50b !important;
+  margin-bottom: 25px !important;
 }
