--- a/src/views/orderBlood.ejs
+++ b/src/views/orderBlood.ejs
@@ -27,6 +27,9 @@
     <div class="page-wrapper p-t-95">
       <div class="welcome m-b-100">
         <h1>Welcome to <span>BloodLife</span>, <%= hospitalName %>!</h1>
+        <% if (message.length > 0) { %>
+        <h2><%= message %></h2>
+        <% } %>
       </div>
 
       <!-- Searching Bar -->
