--- a/src/views/orderBlood.ejs
+++ b/src/views/orderBlood.ejs
@@ -28,7 +28,7 @@
       <div class="welcome m-b-100">
         <h1>Welcome to <span>BloodLife</span>, <%= hospitalName %>!</h1>
         <% if (message.length > 0) { %>
-        <h2><%= message %></h2>
+        <h2 class="mess"><%= message %></h2>
         <% } %>
       </div>
 
