--- a/src/views/history_hospital.ejs
+++ b/src/views/history_hospital.ejs
@@ -57,7 +57,7 @@
                 <td><%- orderBlood[i].blood_type %></td>
                 <td><%- orderBlood[i].volume %></td>
                 <td><%- input_date[i] %></td>
-                <td><%- input_date[i] %></td>
+                <td><%- exp_date[i] %></td>
               </tr>
               <tr class="spacer">
                 <td colspan="100"></td>
