--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -34,9 +34,9 @@
     <div class="limiter">
       <div class="container-login100">
         <div class="wrap-login100">
-          <form class="login100-form" method="" action="">
+          <form class="login100-form" method="post">
             <span class="login100-form-title p-b-56">Log In</span>
-
+            <%- include ("./partials/messages.ejs"); %>
             <!-- Email -->
             <div class="wrap-input100">
               <input class="input100" type="email" name="email" />
