--- a/src/views/updateDonor.ejs
+++ b/src/views/updateDonor.ejs
@@ -1,97 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/profile.css"/>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+    <link rel="stylesheet" href="../css/person.css" />
     <link rel="stylesheet" href="../css/styleall.css" />
-    <link rel="stylesheet" href="../css/person.css"/>
->
+    <link rel="stylesheet" href="../css/appointment.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!--Add this-->
 
-</head>
-<body>
-    <div class="card-label">
-        <div class="card-body">
-            <form>
-            <h6 class="heading-small text-muted mb-4">User information</h6>
-            <div class="pl-lg-4">
-                <div class="row">
-                <div class="col-lg-6">
-                    <div class="form-group focused">
-                    <label class="form-control-label" for="input-username">Username</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" >
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="form-group">
-                    <label class="form-control-label" for="input-email">Email address</label>
-                    <input type="email" id="input-email" class="form-control form-control-alternative" >
-                    </div>
-                </div>
-                </div>
-                <div class="row">
-                <div class="col-lg-6">
-                    <div class="form-group focused">
-                    <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" >
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="form-group focused">
-                    <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" >
-                    </div>
-                </div>
-                </div>
-            </div>
-            <hr class="my-4">
-            <!-- Address -->
-            <h6 class="heading-small text-muted mb-4">Contact information</h6>
-            <div class="pl-lg-4">
-                <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group focused">
-                    <label class="form-control-label" for="input-address">Address</label>
-                    <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" type="text">
-                    </div>
-                </div>
-                </div>
-                <div class="row">
-                <div class="col-lg-4">
-                    <div class="form-group focused">
-                    <label class="form-control-label" for="input-city">City</label>
-                    <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" >
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form-group focused">
-                    <label class="form-control-label" for="input-country">Country</label>
-                    <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" >
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form-group">
-                    <label class="form-control-label" for="input-country">Postal code</label>
-                    <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
-                    </div>
-                </div>
-                </div>
-            </div>
-            <hr class="my-4">
-            <!-- Description -->
-            <h6 class="heading-small text-muted mb-4">About me</h6>
-            <div class="pl-lg-4">
-                <div class="form-group focused">
-                <label>About Me</label>
-                <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ..."></textarea>
-                </div>
-            </div>
-            <button class="btn"type="submit">Submit</button>
-            </form>
-        </div>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+    <!--Add this-->
+
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <link
+      href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <!--Add this-->
+
+    <title>Bloodlife</title>
+  </head>
+  <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+      <div class="navigation__background">&nbsp;</div>
+      <div class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">About us</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Blood bank</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Nutrition</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Testimonials</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Enroll form</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Person</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</body>
+    <div class="main-content">
+      <div
+        class="header pb-8 pt-5 pt-lg-8 align-items-center"
+        style="
+          min-height: 600px;
+          background-image: url(../img/header-bg.jpg);
+          background-size: cover;
+          background-position: center top;
+        "
+      >
+        <!-- Mask -->
+        <span class="mask bg-gradient-default opacity-8"></span>
+        <div class="content">
+          <div class="container">
+            <div class="row align-items-stretch no-gutters contact-wrap">
+              <div class="col-md-12">
+                <div class="form h-100">
+                  <form>
+                    <h6 class="heading-small text-muted mb-4">
+                      User information
+                    </h6>
+                    <div class="pl-lg-4">
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="form-group focused">
+                            <label
+                              class="form-control-label"
+                              for="input-username"
+                              >Username</label
+                            >
+                            <input
+                              type="text"
+                              id="input-username"
+                              class="form-control form-control-alternative"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="form-group">
+                            <label class="form-control-label" for="input-ssn"
+                              >SSN</label
+                            >
+                            <input
+                              type="text"
+                              id="input-ssn"
+                              class="form-control form-control-alternative"
+                            />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="form-group focused">
+                            <label
+                              class="form-control-label"
+                              for="input-first-gender"
+                              >Gender</label
+                            >
+                            <input
+                              type="text"
+                              id="input-last-gender"
+                              class="form-control form-control-alternative"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="form-group focused">
+                            <label
+                              class="form-control-label"
+                              for="input-last-dob"
+                              >Birthdays</label
+                            >
+                            <input
+                              type="date"
+                              id="birthday"
+                              class="form-control form-control-alternative"
+                              name="birthday"
+                            />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="form-group focused">
+                            <label class="form-control-label" for="input-phone"
+                              >Phone</label
+                            >
+                            <input
+                              type="text"
+                              id="input-phone"
+                              class="form-control form-control-alternative"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="form-group focused">
+                            <label class="form-control-label" for="input-email"
+                              >Email</label
+                            >
+                            <input
+                              type="email"
+                              id="input-email"
+                              class="form-control form-control-alternative"
+                            />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="form-group focused">
+                            <label class="form-control-label" for="input-addr"
+                              >Address</label
+                            >
+                            <input
+                              type="text"
+                              id="input-addr"
+                              class="form-control form-control-alternative"
+                            />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <input
+                      type="submit"
+                      class="btn btn-sm btn-primary"
+                      value="Submit"
+                    />
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
