finish login and register

--- a/src/views/home_donor.ejs
+++ b/src/views/home_donor.ejs
@@ -35,6 +35,7 @@
                 <li class="navigation__item"><a href="#" class="navigation__link">About us</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Appointment</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Personal Information</a></li>
+                <li class="navigation__item"><a href="/donor/logout" class="navigation__link" >Logout</a></li>
             </ul>
         </div>
     </div>
