--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -879,6 +879,10 @@ i {
   }
 }
 
+.event-exceprt {
+  min-height: 15rem;
+  margin-bottom: 1rem;
+}
 .event-date {
   text-decoration: none;
   color: black;
@@ -900,7 +904,7 @@ i {
 }
 
 .event-timewhere {
-  margin-top: 2rem;
+  padding-top: 3rem;
 }
 
 .event-time {
