--- a/src/views/pass_forgot.ejs
+++ b/src/views/pass_forgot.ejs
@@ -33,11 +33,11 @@
     <div class="limiter">
       <div class="container-login100">
         <div class="wrap-passfg">
-          <form class="login100-form" method="" action="/login.html">
+          <form class="login100-form" method="post" >
             <span class="login100-form-title p-b-56"
               >Forgot Your Password?</span
             >
-
+            <%- include ("./partials/messages.ejs"); %>
             <p class="m-b-12">
               Please enter your email address and check your email for a link to
               reset your password.
