--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -54,7 +54,7 @@
 
             <!-- Forgot password -->
             <div class="text-right mb-4">
-              <a href="./forgotPass">Forgot Password?</a>
+              <a href="/forgot">Forgot Password?</a>
             </div>
 
             <!-- Login button-->
